Initial controllers, services and DTOs

--- a/backend/src/main/resources/messages.properties
+++ b/backend/src/main/resources/messages.properties
@@ -9,7 +9,63 @@ error.file.invalid_type=Invalid file type
 error.file.too_large=File size exceeds limit
 
 validation.email.invalid=Invalid email format
+validation.email.required=Email is required
 validation.password.invalid=Password must contain at least 8 characters with uppercase, lowercase, number and special character
+validation.password.required=Password is required
+validation.username.required=Username is required
+validation.username.size=Username must be between 3 and 30 characters
+validation.firstname.required=First name is required
+validation.firstname.size=First name cannot exceed 50 characters
+validation.lastname.required=Last name is required
+validation.lastname.size=Last name cannot exceed 50 characters
+validation.bio.size=Bio cannot exceed 500 characters
+validation.country.code.required=Country code is required
+validation.country.code.size=Country code must be between 2 and 3 characters
+validation.country.namekey.required=Country name key is required
+validation.country.latitude.required=Country latitude is required
+validation.country.longitude.required=Country longitude is required
+validation.city.name.required=City name is required
+validation.city.name.size=City name cannot exceed 100 characters
+validation.city.latitude.required=City latitude is required
+validation.city.longitude.required=City longitude is required
+validation.city.country.required=City country is required
+validation.collection.code.required=Collection code is required
+validation.collection.code.size=Collection code cannot exceed 30 characters
+validation.collection.namekey.required=Collection name key is required
+validation.collection.sortorder.required=Collection sort order is required
+validation.trip.name.required=Trip name is required
+validation.trip.name.size=Trip name cannot exceed 100 characters
+validation.trip.description.size=Trip description cannot exceed 500 characters
+validation.trip.creator.required=Trip creator is required
+validation.trip.country.required=Trip country is required
+validation.tripparticipant.trip.required=Trip is required
+validation.tripparticipant.user.required=User is required
+validation.tripinvitation.trip.required=Trip is required
+validation.tripinvitation.inviter.required=Inviter is required
+validation.tripinvitation.invitee.required=Invitee is required
+validation.tripinvitation.message.size=Invitation message cannot exceed 255 characters
+validation.post.author.required=Post author is required
+validation.post.trip.required=Post trip is required
+validation.post.collection.required=Post collection is required
+validation.post.city.required=Post city is required
+validation.post.caption.size=Post caption cannot exceed 2000 characters
+validation.postmedia.post.required=Post is required for media
+validation.postmedia.filename.required=File name is required
+validation.postmedia.filename.size=File name cannot exceed 255 characters
+validation.postmedia.publicid.required=Cloudinary public ID is required
+validation.postmedia.url.required=Cloudinary URL is required
+validation.follow.follower.required=Follower is required
+validation.follow.following.required=Following user is required
+validation.like.user.required=User is required
+validation.like.post.required=Post is required
+validation.comment.author.required=Comment author is required
+validation.comment.post.required=Post is required
+validation.comment.content.required=Comment content is required
+validation.comment.content.size=Comment cannot exceed 1000 characters
+validation.notification.recipient.required=Notification recipient is required
+validation.notification.type.required=Notification type is required
+validation.notification.message.size=Notification message cannot exceed 255 characters
+validation.notification.reference.size=Reference ID cannot exceed 50 characters
 validation.required=This field is required
 validation.min_length=Minimum length is {0} characters
 validation.max_length=Maximum length is {0} characters
