--- a/backend/src/main/resources/messages_pt_BR.properties
+++ b/backend/src/main/resources/messages_pt_BR.properties
@@ -9,7 +9,63 @@ error.file.invalid_type=Tipo de arquivo inválido
 error.file.too_large=Tamanho do arquivo excede o limite
 
 validation.email.invalid=Formato de email inválido
+validation.email.required=Email é obrigatório
 validation.password.invalid=Senha deve conter pelo menos 8 caracteres com maiúscula, minúscula, número e caractere especial
+validation.password.required=Senha é obrigatória
+validation.username.required=Nome de usuário é obrigatório
+validation.username.size=Nome de usuário deve ter entre 3 e 30 caracteres
+validation.firstname.required=Nome é obrigatório
+validation.firstname.size=Nome não pode exceder 50 caracteres
+validation.lastname.required=Sobrenome é obrigatório
+validation.lastname.size=Sobrenome não pode exceder 50 caracteres
+validation.bio.size=Bio não pode exceder 500 caracteres
+validation.country.code.required=Código do país é obrigatório
+validation.country.code.size=Código do país deve ter entre 2 e 3 caracteres
+validation.country.namekey.required=Chave do nome do país é obrigatória
+validation.country.latitude.required=Latitude do país é obrigatória
+validation.country.longitude.required=Longitude do país é obrigatória
+validation.city.name.required=Nome da cidade é obrigatório
+validation.city.name.size=Nome da cidade não pode exceder 100 caracteres
+validation.city.latitude.required=Latitude da cidade é obrigatória
+validation.city.longitude.required=Longitude da cidade é obrigatória
+validation.city.country.required=País da cidade é obrigatório
+validation.collection.code.required=Código da coleção é obrigatório
+validation.collection.code.size=Código da coleção não pode exceder 30 caracteres
+validation.collection.namekey.required=Chave do nome da coleção é obrigatória
+validation.collection.sortorder.required=Ordem da coleção é obrigatória
+validation.trip.name.required=Nome da viagem é obrigatório
+validation.trip.name.size=Nome da viagem não pode exceder 100 caracteres
+validation.trip.description.size=Descrição da viagem não pode exceder 500 caracteres
+validation.trip.creator.required=Criador da viagem é obrigatório
+validation.trip.country.required=País da viagem é obrigatório
+validation.tripparticipant.trip.required=Viagem é obrigatória
+validation.tripparticipant.user.required=Usuário é obrigatório
+validation.tripinvitation.trip.required=Viagem é obrigatória
+validation.tripinvitation.inviter.required=Usuário que convida é obrigatório
+validation.tripinvitation.invitee.required=Usuário convidado é obrigatório
+validation.tripinvitation.message.size=Mensagem do convite não pode exceder 255 caracteres
+validation.post.author.required=Autor do post é obrigatório
+validation.post.trip.required=Viagem do post é obrigatória
+validation.post.collection.required=Coleção do post é obrigatória
+validation.post.city.required=Cidade do post é obrigatória
+validation.post.caption.size=Legenda do post não pode exceder 2000 caracteres
+validation.postmedia.post.required=Post é obrigatório para a mídia
+validation.postmedia.filename.required=Nome do arquivo é obrigatório
+validation.postmedia.filename.size=Nome do arquivo não pode exceder 255 caracteres
+validation.postmedia.publicid.required=ID público do Cloudinary é obrigatório
+validation.postmedia.url.required=URL do Cloudinary é obrigatória
+validation.follow.follower.required=Seguidor é obrigatório
+validation.follow.following.required=Usuário seguido é obrigatório
+validation.like.user.required=Usuário é obrigatório
+validation.like.post.required=Post é obrigatório
+validation.comment.author.required=Autor do comentário é obrigatório
+validation.comment.post.required=Post é obrigatório
+validation.comment.content.required=Conteúdo do comentário é obrigatório
+validation.comment.content.size=Comentário não pode exceder 1000 caracteres
+validation.notification.recipient.required=Destinatário da notificação é obrigatório
+validation.notification.type.required=Tipo de notificação é obrigatório
+validation.notification.message.size=Mensagem da notificação não pode exceder 255 caracteres
+validation.notification.reference.size=ID de referência não pode exceder 50 caracteres
 validation.required=Este campo é obrigatório
 validation.min_length=Comprimento mínimo é de {0} caracteres
 validation.max_length=Comprimento máximo é de {0} caracteres
