--- a/backend/src/main/resources/messages.properties
+++ b/backend/src/main/resources/messages.properties
@@ -2,6 +2,7 @@ error.entity.not_found=Resource not found
 error.validation.failed=Validation failed
 error.data.duplicate=Resource already exists
 error.data.integrity=Data integrity violation
+error.data.invalid=Invalid data access
 error.auth.invalid_credentials=Invalid credentials
 error.server.internal=Internal server error
 error.file.empty=File is empty
