--- a/backend/src/main/resources/messages_pt_BR.properties
+++ b/backend/src/main/resources/messages_pt_BR.properties
@@ -2,6 +2,7 @@ error.entity.not_found=Recurso não encontrado
 error.validation.failed=Falha na validação
 error.data.duplicate=Recurso já existe
 error.data.integrity=Violação de integridade dos dados
+error.data.invalid=Acesso de dados inválido
 error.auth.invalid_credentials=Credenciais inválidas
 error.server.internal=Erro interno do servidor
 error.file.empty=Arquivo está vazio
