--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,9 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Sora</string>
-    <string name="loading">Loading…</string>
-    <string name="error_message">Error: %1$s</string>
-    <string name="retry">Retry</string>
-    <string name="refresh">Refresh</string>
-    <string name="load_hello_world">Load Hello World</string>
+    <string name="app_logo">Logo do Sora</string>
+    <string name="tagline">Conecte-se ao mundo dos viajantes</string>
+
+    <string name="login">Entrar</string>
+    <string name="register">Criar Conta</string>
+    <string name="email">Email</string>
+    <string name="password">Senha</string>
+    <string name="confirm_password">Confirmar Senha</string>
+    <string name="username">Nome de usuário</string>
+    <string name="first_name">Nome</string>
+    <string name="last_name">Sobrenome</string>
+    <string name="enter_email">Digite seu email</string>
+    <string name="enter_password">Digite sua senha</string>
+    <string name="show_password">Mostrar senha</string>
+    <string name="hide_password">Ocultar senha</string>
+    <string name="forgot_password">Esqueceu sua senha?</string>
+    <string name="already_have_account">Já tem uma conta? Faça login</string>
+    <string name="dont_have_account">Não tem uma conta?</string>
+    <string name="sign_up">Cadastre-se</string>
+
+    <string name="like">Curtir</string>
+    <string name="unlike">Descurtir</string>
+    <string name="comment">Comentar</string>
+    <string name="share">Compartilhar</string>
+    <string name="save">Salvar</string>
+    <string name="likes_count">%d curtidas</string>
+    <string name="like_single">%d curtida</string>
+    <string name="view_all_comments">Ver todos os %d comentários</string>
+
+    <string name="camera">Câmera</string>
+    <string name="direct_messages">Mensagens diretas</string>
+    <string name="more_options">Mais opções</string>
+    <string name="profile_picture">Foto de perfil</string>
+    <string name="post_image">Imagem da postagem</string>
+
+    <string name="loading">Carregando…</string>
+    <string name="error">Erro</string>
+    <string name="retry">Tentar novamente</string>
+    <string name="cancel">Cancelar</string>
+    <string name="confirm">Confirmar</string>
+    <string name="ok">OK</string>
+
+    <string name="error_network_connection">Erro de conexão com o servidor</string>
+    <string name="error_network_timeout">Tempo limite excedido</string>
+    <string name="error_server_unavailable">Servidor indisponível</string>
+    <string name="error_unknown">Erro desconhecido</string>
+    <string name="error_invalid_credentials">Email ou senha incorretos</string>
+    <string name="error_validation">Dados inválidos</string>
+    <string name="error_generic">Algo deu errado. Tente novamente.</string>
+
+    <string name="time_ago">há %s</string>
+    <string name="just_now">agora</string>
+    <string name="one_minute">1m</string>
+    <string name="minutes">%dm</string>
+    <string name="one_hour">1h</string>
+    <string name="hours">%dh</string>
+    <string name="one_day">1d</string>
+    <string name="days">%dd</string>
 </resources>
