--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -96,8 +96,10 @@
     <string name="validation_bio_max_length">Bio deve ter no máximo 500 caracteres</string>
     <string name="register_error_default">Erro ao criar conta</string>
     <string name="nav_globe">Globo</string>
+    <string name="nav_feed">Feed</string>
     <string name="nav_explore">Explorar</string>
     <string name="nav_create">Criar</string>
+    <string name="nav_notifications">Notificações</string>
     <string name="nav_profile">Perfil</string>
     <string name="edit_profile">Editar Perfil</string>
     <string name="travel_statistics">Estatísticas de Viagem</string>
@@ -460,5 +462,54 @@
     <string name="explore_empty_title">Nenhuma publicação em destaque</string>
     <string name="explore_empty_message">Não há publicações em tendência neste momento</string>
     <string name="error_loading_explore">Erro ao carregar tendências</string>
+
+    <string name="notifications">Notificações</string>
+    <string name="notifications_empty_title">Nenhuma notificação</string>
+    <string name="notifications_empty_message">Você não tem notificações no momento</string>
+    <string name="notifications_mark_all_read">Marcar todas como lidas</string>
+    <string name="notification_liked_your_post">curtiu sua publicação</string>
+    <string name="notification_commented_your_post">comentou na sua publicação</string>
+    <string name="notification_replied_your_comment">respondeu seu comentário</string>
+    <string name="notification_started_following_you">começou a seguir você</string>
+    <string name="error_loading_notifications">Erro ao carregar notificações</string>
+    <string name="error_marking_as_read">Erro ao marcar como lida</string>
+
+    <string name="create_post_title">Criar Publicação</string>
+    <string name="create_post_select_media">Selecione a mídia</string>
+    <string name="create_post_from_camera">Da câmera</string>
+    <string name="create_post_from_gallery">Da galeria</string>
+    <string name="create_post_collaborative">Colaborativa</string>
+    <string name="create_post_select_country">Selecione o país</string>
+    <string name="create_post_search_country">Buscar país...</string>
+    <string name="create_post_select_city">Selecione a cidade</string>
+    <string name="create_post_search_city">Buscar cidade...</string>
+    <string name="create_post_use_current_location">Usar localização atual</string>
+    <string name="create_post_select_category">Selecione a categoria</string>
+    <string name="create_post_category_general">Geral</string>
+    <string name="create_post_category_culinary">Culinária</string>
+    <string name="create_post_category_events">Eventos</string>
+    <string name="create_post_category_others">Outros</string>
+    <string name="create_post_add_caption">Adicionar legenda</string>
+    <string name="create_post_caption_optional">Escreva uma legenda... (opcional)</string>
+    <string name="create_post_review">Revisar publicação</string>
+    <string name="create_post_country_label">País:</string>
+    <string name="create_post_city_label">Cidade:</string>
+    <string name="create_post_category_label">Categoria:</string>
+    <string name="create_post_caption_label">Legenda:</string>
+    <string name="create_post_publish">Publicar</string>
+    <string name="create_post_uploading">Enviando...</string>
+    <string name="create_post_upload_progress">Enviando publicação: %d%%</string>
+    <string name="create_post_success">Publicação criada com sucesso!</string>
+    <string name="next">Próximo</string>
+
+    <string name="error_loading_countries">Erro ao carregar países</string>
+    <string name="error_location_unavailable">Localização não disponível</string>
+    <string name="error_reverse_geocode">Erro ao obter endereço da localização</string>
+    <string name="error_country_not_found">País não encontrado</string>
+    <string name="error_country_not_detected">Não foi possível detectar o país</string>
+    <string name="error_no_image_selected">Nenhuma imagem selecionada</string>
+    <string name="error_missing_location">País e cidade são obrigatórios</string>
+    <string name="error_post_creation_failed">Falha ao criar publicação</string>
+    <string name="error_upload_failed">Falha ao enviar imagem</string>
 
 </resources>
